<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_scenario_execution</name>
  <version>0.0.0</version>
  <description>The turtlebot3_scenario_execution package</description>
  <maintainer email="labiybafakh@gmail.com">Muhammad Labiyb Afakh</maintainer>
  <license>MIT license</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_navigation</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>dwa_local_planner</depend>

  <export>

  </export>
</package>
